Moved script to individual file

--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twatter</title>
+    <script src="./../scripts/script.js" defer></script>
 </head>
 <body>
     <form onsubmit="return false">
@@ -26,33 +27,5 @@
             <button>Delete</button>
         </form>
     </template>
-
-    <script>
-        async function tweet() {
-            const form = event.target.form;
-            console.log(form.tweet_text.value);
-
-            const connection = await fetch("/tweet", {
-                method: "POST",
-                body: new FormData(form)
-            });
-
-            if (!connection.ok) {
-                alert("Could not tweet");
-            }
-
-            const tweet = await connection.json();
-            console.log(tweet);
-
-            const temp = document.querySelector("#tweetTemp");
-            const clone = temp.cloneNode(true).content;
-            clone.querySelector("#tweetId").textContent = tweet.tweet_id;
-            clone.querySelector("#tweetText").textContent = tweet.tweet_text;
-
-            const dest = document.querySelector("#tweets");
-            const firstChild = dest.firstChild;
-            dest.insertBefore(clone, firstChild);
-        }
-    </script>
 </body>
 </html>
