--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <form onsubmit="return false">
-        <textarea name="tweet_text" id="tweet_text" cols="30" rows="10"></textarea>
+        <textarea id="tweet_text" name="tweet_text" id="tweet_text" cols="30" rows="10"></textarea>
+        <input id="tweet_image" name="tweet_image" type="file" accept="image/png, image/jpg, image/jpeg">
         <button onclick="tweet()">Twat this</button>
     </form>
 
@@ -19,8 +20,9 @@
     <template id="tweetTemp">
         <form onsubmit="return false">
             <input name="tweet_id" type="hidden">
-            <p id="tweetId"></p>
             <p id="tweetText"></p>
+            <img>
+            <p id="tweetCreatedAtDate"></p>
             <button>Like</button>
             <button>Dislike</button>
             <button>Update</button>
