--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
 <body>
     <form onsubmit="return false">
         <textarea id="tweet_text" name="tweet_text" id="tweet_text" cols="30" rows="10"></textarea>
-        <input id="tweet_image" name="tweet_image" type="file" accept="image/png, image/jpg, image/jpeg">
+        <input id="tweet_image_src" name="tweet_image_src" type="file" accept="image/png, image/jpg, image/jpeg">
         <button onclick="tweet()">Twat this</button>
     </form>
 
