--- a/views/user.html
+++ b/views/user.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+% include('header', title=user["user_handle"])
     {{ user }}
-</body>
-</html>
+% include('footer')
