--- a/views/user.html
+++ b/views/user.html
@@ -2,6 +2,7 @@
     {{ user }}
 
     <form onsubmit="return false">
+        <input name="user_id" type="hidden" value="{{ user['user_id']}}">
         <textarea id="tweet_text" name="tweet_text" id="tweet_text" cols="30" rows="10"></textarea>
         <input id="tweet_image_src" name="tweet_image_src" type="file" accept="image/png, image/jpg, image/jpeg">
         <button onclick="tweet()">Twat this</button>
@@ -14,6 +15,7 @@
     <template id="tweetTemp">
         <form onsubmit="return false">
             <input name="tweet_id" type="hidden">
+            <input name="user_id" type="hidden">
             <p id="tweetText"></p>
             <img>
             <p id="tweetCreatedAtDate"></p>
