login button is now a link

--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 % include('header', title='Home')
     <button>Sign up</button>
-    <button>Log in</button>
+    <a href="./login">Log in</button>
 
     <section id="signUp">
         <form action="/signup" method="POST">
