--- a/views/login.html
+++ b/views/login.html
@@ -1,6 +1,6 @@
 % include('header', title='Log in')
     <main>
-        <form id="loginForm" onsubmit="logIn()" action="/login" method="POST" novalidate="true">
+        <form id="loginForm" onsubmit="logIn()" novalidate="true">
             <div class="">
                 <label for="userEmail" class="">E-mail</label>
                 <input id="userEmail" name="user_email" type="email" class="" autocomplete="email" placeholder="Please enter your e-mail" pattern='(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))' required>
