fixed a/button tag bug

--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 % include('header', title='Home')
     <button>Sign up</button>
-    <a href="./login">Log in</button>
+    <a href="./login">Log in</a>
 
     <section id="signUp">
         <form action="/signup" method="POST">
