uses classes to display/hide elements

--- a/views/explore.html
+++ b/views/explore.html
@@ -11,7 +11,7 @@
             </form>
         % end
 
-        <section id="updateTweet" style="display: none;">
+        <section id="updateTweet" class="hidden">
             
         </section>
     
@@ -52,7 +52,7 @@
             <button onclick="updateTweet()">Update Tweet</button>
             <button class="delete">X</button>
             <img>
-            <span class="hint" style="display: none;"></span>
+            <span class="hint hidden"></span>
         </form>
     </template>
 
