--- a/views/login.html
+++ b/views/login.html
@@ -4,12 +4,12 @@
             <div class="">
                 <label for="userEmail" class="">E-mail</label>
                 <input id="userEmail" name="user_email" type="email" class="" autocomplete="email" placeholder="Please enter your e-mail" pattern='(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))' required>
-                <span id="emailHint" class="hidden hint" style="display: none;"></span>
+                <span id="emailHint" class="hidden hint"></span>
             </div>
             <div class="">
                 <label for="userPassword" class="">Password</label>
                 <input id="userPassword" name="user_password" type="password" class="" placeholder="Please enter your password" pattern='(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}' required>
-                <span id="passwordHint" class="hidden hint" style="display: none;"></span>
+                <span id="passwordHint" class="hidden hint"></span>
             </div>
             <div class="">
                 <button>Log in</button>
