--- a/views/login.html
+++ b/views/login.html
@@ -1,5 +1,5 @@
 % include('header', title='Log in')
-    <main>
+    <main class="grid grid-cols-1 lg:grid-cols-6">
         <form id="loginForm" onsubmit="logIn()" novalidate="true">
             <div class="">
                 <label for="userEmail" class="">E-mail</label>
