--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,29 @@
 % include('header', title='Home')
-    <button>Sign up</button>
-    <a href="./login">Log in</a>
+    <main class="grid grid-cols-1 md:grid-cols-12 min-h-screen">
+        <div class="col-span-1 md:col-span-6 lg:col-span-7 order-2 w-full md:order-1 md:min-h-full max-h-1/2 md:max-h-screen overflow-hidden flex items-center justify-center">
+            <!-- OBJECT COVER -->
+            <img class="h-full w-full max-w-none" src="./images/frontpage_image.png">
+            <div class="absolute h-1/4 md:h-1/3 lg:h-1/2">
+                <svg class="h-full w-full fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"/></svg>
+            </div>
+        </div>
+        <div class="col-span-1 md:col-span-6 lg:col-span-5 order-1 md:order-2 md:min-h-full max-h-1/2 md:max-h-screen p-8 flex items-center">
+            <div class="">
+                <h1 class="text-7xl font-bold mb-10">Happening now</h1>
+                <p class="text-4xl font-bold mb-6">Join Twatter today.</p>
+                <div class="w-full mb-10">
+                    <button class="w-2/3 bg-twitter-blue1 hover:bg-twiiter-blue2 rounded-full text-white p-3 font-bold transition-colors" onclick="toggleSignUpModal()">Sign up with email</button>
+                </div>
+                <div class="w-full">
+                    <p class="text-xl font-bold mb-2">Already have an account?</p>
+                    <a class="block w-2/3 text-center text-twitter-blue1 font-bold rounded-full border border-solid border-gray-500 p-3 transition-colors bg-transparent hover:bg-twitter-blue1-10" href="./login">Sign in</a>
+                </div>
+            </div>
 
-    <section id="signUp">
+        </div>
+    </main>
+
+    <section id="signUp" class="hidden fixed top-0 h-screen w-full">
         <form action="/signup" method="POST">
             <div class="">
                 <label for="userFirstName">First name</label>
@@ -33,4 +54,5 @@
             </div>
         </form>
     </section>
+    
 % include('footer')
