--- a/views/header.html
+++ b/views/header.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} | Twatter</title>
     <link rel="stylesheet" href="./app.css">
+    <script src="https://kit.fontawesome.com/c884ab5724.js" crossorigin="anonymous"></script>
     <script src="./scripts/script.js" defer></script>
 </head>
 <body>
